--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ header nav {
     overflow: hidden;
     width: 105%;
     height: 699px;
-    background: url("C:/Users/Madien/Desktop/DEMedican/assets/img/contact.jpg") center center;
+    background: url("https://github.com/Momadeen/DeMedican.github.io/blob/master/assets/img/contact.jpg") center center;
     background-size: cover;
     background-repeat: no-repeat; }
     #contact .contact-image img {
