--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ header nav {
     overflow: hidden;
     width: 105%;
     height: 699px;
-    background: url("https://github.com/Momadeen/DeMedican.github.io/blob/master/assets/img/contact.jpg") center center;
+    background: url("https://lh3.googleusercontent.com/jhdwn8bwc_PCFQfUGrpCXF_u370TDAdYREwfVlD5DEReNGV15EAjs2zY4PoF6fE3LUIbFMJEcWQ=w640-h400-e365") center center;
     background-size: cover;
     background-repeat: no-repeat; }
     #contact .contact-image img {
@@ -214,6 +214,8 @@ header nav {
     width: 100%;
     background-color: #DE6262;
     color: #FFF; }
+    #contact .contact-form h2 {
+      font-weight: 700; }
     #contact .contact-form label {
       font-size: 15px;
       color: #f8f5f5;
@@ -497,5 +499,48 @@ header nav {
 
   .caption-white p {
     font-size: 13px !important; } }
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .contact-info ul {
+    margin: 0 !important; }
+    .contact-info ul li {
+      padding: 6px 10px !important; }
+  .contact-info .info-right {
+    width: 100%; }
+    .contact-info .info-right .book-button {
+      padding: 15px 22px;
+      width: 100%;
+      text-align: center; }
+
+  #hero .swiper-container {
+    height: 250px; }
+    #hero .swiper-container .caption.caption-white {
+      left: 7% !important; }
+      #hero .swiper-container .caption.caption-white p {
+        width: 150% !important; }
+    #hero .swiper-container .caption p {
+      font-size: 10px !important;
+      width: 200% !important; }
+
+  .serv-box i {
+    left: -15% !important; }
+
+  .work-title {
+    padding-left: 10px !important; }
+
+  #our-works .stats {
+    height: 450px !important; }
+    #our-works .stats .stat-box {
+      margin: 20px 0 !important; }
+
+  #footer {
+    height: 1100px !important; }
+
+  .contact-form h2 {
+    font-weight: 700 !important;
+    margin-bottom: 15px !important; }
+
+  #loading .lds-heart {
+    top: 55%;
+    left: 40%; } }
 
 /*# sourceMappingURL=style.css.map */
