--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ header nav {
     overflow: hidden;
     width: 105%;
     height: 699px;
-    background: url("https://lh3.googleusercontent.com/jhdwn8bwc_PCFQfUGrpCXF_u370TDAdYREwfVlD5DEReNGV15EAjs2zY4PoF6fE3LUIbFMJEcWQ=w640-h400-e365") center center;
+    background: url("https://images.pexels.com/photos/1170979/pexels-photo-1170979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center center;
     background-size: cover;
     background-repeat: no-repeat; }
     #contact .contact-image img {
