--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -747,3 +747,23 @@ header {
         }
     }
 }
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .owl-item {
+        .team-box {
+            h3 {
+                font-size: 12.9719px!important;
+                margin: 20px 0px 10px -58px!important;
+            }
+            p {
+                font-size: 11px!important;
+                margin: 20px 0px 10px -58px!important;
+            }
+        }
+    }
+    #footer button {
+        margin: 12px 28%;
+        width: 143px;
+        padding: .375rem .75rem;
+    }
+}
